--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorGradientEnd">#1A4973</color>
+    <color name="colorGradientStart">#282D39</color>
+
+    <color name="colorDefaultTv">#FFFFFF</color>
 </resources>
