--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,22 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="DefaultTitleTextView">
+        <item name="android:textSize">@dimen/mediumText</item>
+        <item name="android:textColor">@color/colorDefaultTv</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="DefaultSubtitleTextView">
+        <item name="android:textSize">@dimen/smallText</item>
+        <item name="android:textColor">@color/colorDefaultTv</item>
     </style>
 
 </resources>
