--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,9 @@
         <item name="android:textColor">@color/colorDefaultTv</item>
     </style>
 
+    <style name="ActionRoundedButton">
+        <item name="android:background">@drawable/round_button_ripple_bg</item>
+        <item name="android:layout_height">@dimen/actionButtonHeight</item>
+    </style>
+
 </resources>
