--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
 
     <color name="colorGradientEnd">#1A4973</color>
     <color name="colorGradientStart">#282D39</color>
 
     <color name="colorDefaultTv">#FFFFFF</color>
+
+    <color name="colorDefaultTxt">#FFFFFF</color>
 
     <color name="colorActionButton">#00a5a8</color>
 </resources>
