--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorDefaultTxt">#FFFFFF</color>
 
     <color name="colorActionButton">#00a5a8</color>
+
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
