--- a/app/src/main/res/layout/send_money_dialog.xml
+++ b/app/src/main/res/layout/send_money_dialog.xml
@@ -149,6 +149,7 @@
                     android:layout_marginBottom="@dimen/mediumMargin"
                     android:onClick="@{ () -> viewModel.sendMoney()}"
                     android:text="@string/send_money"
+                    android:enabled="@{viewModel.isValidValue() ? true : false, default=false}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cvValue"
