--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -10,7 +10,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.ContactListActivity">
+        tools:context=".ui.activity.ContactListActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvContactList"
