--- a/app/src/main/res/layout/send_money_dialog.xml
+++ b/app/src/main/res/layout/send_money_dialog.xml
@@ -5,6 +5,7 @@
             name="viewModel"
             type="com.mcaserta.neontest.viewmodel.SendMoneyViewModel" />
 
+        <import type="android.view.View"/>
         <variable
             name="ctx"
             type="android.content.Context" />
@@ -30,8 +31,18 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/default_gradient">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/default_gradient"
-                android:padding="@dimen/largePadding">
+                android:padding="@dimen/largePadding"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="@{viewModel.isLoading || viewModel.showAnimation ? View.INVISIBLE : View.VISIBLE, default=visible}">
 
                 <ImageButton
                     android:layout_width="@dimen/smallButtonWidth"
@@ -156,6 +167,51 @@
                     app:layout_constraintWidth_percent="0.80" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE, default=gone}"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="@{viewModel.showAnimation &amp;&amp; !viewModel.isLoading ? View.VISIBLE : View.GONE, default=gone}">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animView"
+                    android:layout_width="@dimen/largeImgWidth"
+                    android:layout_height="@dimen/largeImgHeight"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:lottie_rawRes="@raw/anim_money"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintWidth_percent="0.75"
+                    style="@style/DefaultSubtitleTextView"
+                    android:text="@{viewModel.message}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/animView"
+                    android:fontFamily="sans-serif-light"
+                    android:textAlignment="center"
+                    android:layout_marginTop="@dimen/smallMargin"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
