--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,9 @@
     <dimen name="smallButtonHeight">20dp</dimen>
     <dimen name="smallButtonWidth">20dp</dimen>
 
+    <dimen name="pointCharHeight">15dp</dimen>
+    <dimen name="pointCharWidth">15dp</dimen>
+
     <!-- Margens e Paddings -->
     <dimen name="smallMargin">10dp</dimen>
     <dimen name="mediumMargin">20dp</dimen>
@@ -32,4 +35,6 @@
     <dimen name="smallPadding">10dp</dimen>
     <dimen name="mediumPadding">20dp</dimen>
     <dimen name="largePadding">40dp</dimen>
+
+    <dimen name="imgProfilePadding">3dp</dimen>
 </resources>
