--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,6 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/default_gradient"
@@ -25,25 +26,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cvImgProfile"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="@dimen/largeImgWidth"
                 android:layout_height="@dimen/largeImgHeight"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/smallMargin"
-                app:cardCornerRadius="@dimen/circleImgRadius"
+                android:background="@drawable/cardview_img_border"
+                android:padding="@dimen/imgProfilePadding"
                 app:layout_constraintBottom_toTopOf="@id/tvUserName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
 
-                <ImageView
-                    android:id="@+id/imgProfile"
-                    android:layout_width="@dimen/largeImgWidth"
-                    android:layout_height="@dimen/largeImgHeight"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/mcaserta" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cvImgProfile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:background="@drawable/cardview_img_border"
+                    app:cardCornerRadius="@dimen/circleImgRadius"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
-            </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/imgProfile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/mcaserta" />
+
+                </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <TextView
                 android:id="@+id/tvUserName"
